DuPont DevSB/src/objects/pse__Permission_Control__c.object
<CustomObject>
    <customHelpPage>pse__PermissionControlHelp</customHelpPage>
    <description>Grants a set of stand-alone or cascading permissions to a single Salesforce user, with reference to either a resource, region, practice, group, or project. Controls whether the user can carry out specific processes including: logging time on behalf of other resources, entering expenses, staffing, and viewing and editing projects in Project Task Gantt.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to generate and release Billing Events for Projects belonging to specified Regions/Practices/Groups, and to edit Billing-related fields (Billed checkbox and Billing Event Item) for Resources&apos; business records.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to generate and release Billing Events for Projects belonging to specified Regions/Practices/Groups, and to edit Billing-related fields (Billed checkbox and Billing Event Item) for Resources&apos; business records.</inlineHelpText>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cascading_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box for Permission Controls associated with a hierarchy (e.g. Region, Practice, or Group) means that the Permission also applies to (Resources belonging to) all nodes lower in the hierarchy, in addition to the specified node.</description>
        <inlineHelpText>Checking this box for Permission Controls associated with a hierarchy (e.g. Region, Practice, or Group) means that the Permission also applies to (Resources belonging to) all nodes lower in the hierarchy, in addition to the specified node.</inlineHelpText>
        <label>Cascading Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Edit_Task_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the selected user can use Project Task Gantt in edit mode if they are not the project manager of the selected project.</inlineHelpText>
        <label>Project Task Gantt Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to enter/edit Expenses and Expense Reports for Resources other than their own.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to enter/edit Expenses and Expense Reports for Resources other than their own.</inlineHelpText>
        <label>Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Ops_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to edit Expenses and Expense Reports for Resources after they have been approved but before they have been billed.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to edit Expenses and Expense Reports for Resources after they have been approved but before they have been billed.</inlineHelpText>
        <label>Expense Ops Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allowed to perform editing on the Forecasts page for the Region/Practice/Group</inlineHelpText>
        <label>Forecast Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_View__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allowed to view the Forecasts page for the Region/Practice/Group</inlineHelpText>
        <label>Forecast View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Group containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Group.</description>
        <inlineHelpText>This is the Group containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Group.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Permission Controls</relationshipLabel>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to  to edit Invoicing-related fields (Invoiced checkbox, Invoice Date, Invoice Number) for a Project&apos;s business records.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to  to edit Invoicing-related fields (Invoiced checkbox, Invoice Date, Invoice Number) for Project&apos;s business records.</inlineHelpText>
        <label>Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Practice containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Practice.</description>
        <inlineHelpText>This is the Practice containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Practice.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Permission Controls</relationshipLabel>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Project containing Assignments for Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Project, only in relation to the Project.</description>
        <inlineHelpText>This is the Project containing Assignments for Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Project, only in relation to the Project.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Permission Controls</relationshipLabel>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Region containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Region.</description>
        <inlineHelpText>This is the Region containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Region.</inlineHelpText>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Permission Controls</relationshipLabel>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to enter/edit Resource Requests for specified Regions/Practices/Groups.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to enter/edit Resource Requests for specified Regions/Practices/Groups.</inlineHelpText>
        <label>Resource Request Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Resource who is the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of this Resource.</description>
        <inlineHelpText>This is the Resource who is the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of this Resource.</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permission Controls</relationshipLabel>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Skills_And_Certifications_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to enter/edit Skills and Certifications for Resources other than their own.</description>
        <label>Skills And Certifications Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Skills_And_Certifications_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to view Expenses for Resources other than their own. If a user has Edit permission, they implicitly also have View permission.</description>
        <label>Skills And Certifications View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to staff Resources from specified Regions/Practices/Groups.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to staff Resources from specified Regions/Practices/Groups.</inlineHelpText>
        <label>Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to enter/edit Timecards for Resources other than their own.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to enter/edit Timecards for Resources other than their own.</inlineHelpText>
        <label>Timecard Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Ops_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox governs the User&apos;s ability to edit Timecards for Resources after they have been approved but before they have been billed.</description>
        <inlineHelpText>This checkbox governs the User&apos;s ability to edit Timecards for Resources after they have been approved but before they have been billed.</inlineHelpText>
        <label>Timecard Ops Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permission_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__View_Task_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the selected user can use Project Task Gantt in read-only mode if they are not the project manager of the selected project.</inlineHelpText>
        <label>Project Task Gantt View</label>
        <type>Checkbox</type>
    </fields>
    <label>Permission Control</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__User__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Cascading_Permission__c</columns>
        <columns>pse__Resource_Request_Entry__c</columns>
        <columns>pse__Staffing__c</columns>
        <columns>pse__Timecard_Entry__c</columns>
        <columns>pse__Expense_Entry__c</columns>
        <columns>pse__Billing__c</columns>
        <columns>pse__Skills_And_Certifications_Entry__c</columns>
        <columns>pse__Skills_And_Certifications_View__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Permission Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Controls</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>pse__Permission_Control_User_Required</fullName>
        <active>true</active>
        <description>Permission Controls must specify a User.</description>
        <errorConditionFormula>OR(ISNULL(pse__User__c),(pse__User__c=&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>pse__User__c</errorDisplayField>
        <errorMessage>Permission Controls must specify a User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Permission_May_Not_Have_Multiple_Targets</fullName>
        <active>true</active>
        <description>Permission Control must not reference more than one of the following:  Resource, Region, Practice, Group, or Project.</description>
        <errorConditionFormula>OR(AND(NOT(OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)),OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;))))))</errorConditionFormula>
        <errorMessage>Permission Control must not reference more than one of the following:  Resource, Region, Practice, Group, or Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Permission_Must_Have_Target_Entity</fullName>
        <active>true</active>
        <description>Permission Control must reference either a Resource or a Region/Practice/Group or Project.</description>
        <errorConditionFormula>AND(OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;)),OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;)))</errorConditionFormula>
        <errorMessage>Permission Control must reference either a Resource or a Region/Practice/Group or Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Start_Date_may_not_be_After_End_Date</fullName>
        <active>true</active>
        <description>The Permission Control Start Date may not be later than the End Date.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Start_Date__c)),NOT(ISNULL(pse__End_Date__c)),(pse__Start_Date__c&gt;pse__End_Date__c))</errorConditionFormula>
        <errorMessage>The Permission Control Start Date may not be later than the End Date.</errorMessage>
    </validationRules>
</CustomObject>